--- a/style.css
+++ b/style.css
@@ -11,4 +11,25 @@
         background-color: var(--cor-de-fundo);
         color: var (--branco);
         font-family:´chakra petch´,sans-serif;
+    } 
+    .conteudo-principal {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 1200 px;
+        width: 100%;
+        margin: 0 auto;
     }
+    .titulo-principal{ text-align: left;
+        width:100%;
+        font-size: 32px;
+    }
+    .titulo-principal span {
+        color: var (--verde);
+    }
+.botao {
+    font-family: ""crakra petch"", sans-serif;
+    background-color: var (--botao-inativo);
+    color: var (--branco);
+    display: flex;
